--- a/PassTrackerAPI/PassTrackerAPI.csproj
+++ b/PassTrackerAPI/PassTrackerAPI.csproj
@@ -4,6 +4,8 @@
     <TargetFramework>net9.0</TargetFramework>
     <Nullable>enable</Nullable>
     <ImplicitUsings>enable</ImplicitUsings>
+	<GenerateDocumentationFile>true</GenerateDocumentationFile>
+	<NoWarn>$(NoWarn);1591</NoWarn>
     <UserSecretsId>28bca674-4510-446a-afb6-03aecb54d1c1</UserSecretsId>
   </PropertyGroup>
 
